# _old-goblin-rl

./: Cargo.toml  Cargo.toml~  DESIGN_NOTES.txt  README.txt  rusty-tags.vi
src/: .gui.rs.swp  .main.rs.swp  .player.rs.swp  ARCHITECTURE_NOTES.txt  CODE_ARCHITECTURE.txt  NOTES.txt  NOTES.txt~  bleed_system.rs  bleed_system.rs~  c_menu_system.rs  c_menu_system.rs~  camera.rs  components.rs  components.rs~  damage_system.rs  damage_system.rs~  dot_system.rs~  equip_system.rs  equip_system.rs~  gamelog.rs  gui.rs  gui.rs~  healing_system.rs  healing_system.rs~  hostile_ai_system.rs  hostile_ai_system.rs~  hunger_system.rs  hunger_system.rs~  infocard.rs  inventory_system.rs  inventory_system.rs~  light_system.rs  light_system.rs~  main.rs  main.rs~  map.rs  map.rs~  map_indexing_system.rs  melee_combat_system.rs  melee_combat_system.rs~  (+19 more)
src/_old/: gui.rs
src/command/: mod.rs
src/gamelog/: logger.rs  mod.rs
src/gui/: .widget.rs.swp  NOTES.txt  TEST.rs  ]  cursor.rs  game_over.rs  look_n_feel.rs  main_menu.rs  mod.rs  textify.rs  user_input.rs  widget.rs  yaml_parser.rs
src/map_builders/: .mod.rs.swp  area_starting_points.rs  bsp_corridors.rs  bsp_dungeon.rs  bsp_dungeon.rs~  bsp_interior.rs  bsp_interior.rs~  cellular_automata.rs  cellular_automata.rs~  common.rs  common.rs~  cull_unreachable.rs  distant_exit.rs  dla.rs  dla.rs~  door_placement.rs  drunkard.rs  drunkard.rs~  maze.rs  maze.rs~  mod.rs  mod.rs~  room_based_spawner.rs  room_based_stairs.rs  room_based_starting_position.rs  room_corner_rounding.rs  room_corridor_spawner.rs  room_corridors_dogleg.rs  (+11 more)
(+32 files in other folders)
