[package]
name = "my_rl"
version = "0.1.0"
authors = ["wormphlegm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
bracket-terminal = "0.8.1"
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.93", features = ["derive", "rc"] }
serde_json = "1.0.39" 
serde_yaml = "0.8"
serde_derive = "1.0"
rand = "0.7"
